docs/0.14/_sources/api/gammapy.cube.MapDataset.rst.txt
MapDataset
==========

.. currentmodule:: gammapy.cube

.. autoclass:: MapDataset
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~MapDataset.data_shape
      ~MapDataset.mask
      ~MapDataset.model
      ~MapDataset.parameters

   .. rubric:: Methods Summary

   .. autosummary::

      ~MapDataset.copy
      ~MapDataset.create
      ~MapDataset.fake
      ~MapDataset.from_hdulist
      ~MapDataset.likelihood
      ~MapDataset.likelihood_per_bin
      ~MapDataset.npred
      ~MapDataset.plot_residuals
      ~MapDataset.read
      ~MapDataset.residuals
      ~MapDataset.stack
      ~MapDataset.to_dict
      ~MapDataset.to_hdulist
      ~MapDataset.to_spectrum_dataset
      ~MapDataset.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: data_shape
   .. autoattribute:: mask
   .. autoattribute:: model
   .. autoattribute:: parameters

   .. rubric:: Methods Documentation

   .. automethod:: copy
   .. automethod:: create
   .. automethod:: fake
   .. automethod:: from_hdulist
   .. automethod:: likelihood
   .. automethod:: likelihood_per_bin
   .. automethod:: npred
   .. automethod:: plot_residuals
   .. automethod:: read
   .. automethod:: residuals
   .. automethod:: stack
   .. automethod:: to_dict
   .. automethod:: to_hdulist
   .. automethod:: to_spectrum_dataset
   .. automethod:: write
